--- a/css/body.css
+++ b/css/body.css
@@ -1,17 +1,442 @@
 
+.click_left {
+  width: 130px;
+  height: 53px;
+  background-color: #029a49;
+  position: fixed;
+  left: 16px;
+  top: 520px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  z-index: 12;
+  .black_screen {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.281);
+    display: none;
+    position: absolute;
+    top: -520px;
+    left: -16px;
+  }
+  input[type="radio"] {
+    display: none;
+  }
+  .label1 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 5px;
+    cursor: pointer;
+    & span {
+      font-size: 15px;
+      color: white;
+    }
+  }
+  .container {
+    width: 460px;
+    height: 355px;
+    background-color: white;
+    display: none;
+    position: absolute;
+    left: calc(50vw - 460px / 2);
+    top: calc(-50vh - 100px);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    .top {
+      width: 100%;
+      height: 75px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-left: 20px;
+      padding-right: 20px;
+      .text {
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+        & p {
+          font-size: 16px;
+          &:nth-of-type(2) {
+            font-size: 14px;
+            color: gray;
+          }
+        }
+      }
+      & label {
+        cursor: pointer;
+      }
+    }
+    .buttom {
+      width: 100%;
+      height: 250px;
+      display: flex;
+      justify-content: space-evenly;
+      .left,
+      .right {
+        width: 206px;
+        height: 100%;
+        border-radius: 8px;
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 8px;
+        -ms-border-radius: 8px;
+        -o-border-radius: 8px;
+        position: relative;
+        & img {
+          width: 130px;
+          height: 130px;
+          object-fit: cover;
+          position: absolute;
+          bottom: 20px;
+          left: 0;
+        }
+        .top1 {
+          height: 40px;
+          width: 100%;
+          display: flex;
+          margin-top: 20px;
+          margin-right: 10px;
+          & p {
+            font-size: 16px;
+            position: absolute;
+            top: 20px;
+          }
+        }
+      }
+      .left,
+      .right {
+        background-color: #feebde;
+        .top2 {
+          width: 106px;
+          height: 27px;
+          background-color: #029a49;
+          border-radius: 20px;
+          -webkit-border-radius: 20px;
+          -moz-border-radius: 20px;
+          -ms-border-radius: 20px;
+          -o-border-radius: 20px;
+          border-top-right-radius: unset;
+          margin-right: 10px;
+          position: absolute;
+            top: 50px;
+          & p {
+            color: white;
+            font-size: 13px;
+            font-weight: bold;
+            text-align: center;
+            line-height: 27px;
+           
+            top: 20px;
+          }
+        }
+      }
+      .right {
+        background-color: #dbf3e6;
+        .top2 {
+          background-color: #ff8042;
+        }
+      }
+    }
+  }
+  #show_click_left:checked {
+    ~ .container {
+      display: block;
+    }
+    ~ .black_screen {
+      display: block;
+    }
+  }
+}
+.click_right {
+  width: 48px;
+  height: 48px;
+  background-color: #ef4056;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  position: fixed;
+  top: 520px;
+  right: 50px;
+  cursor: pointer;
+  z-index: 15;
+  input[type="radio"] {
+    display: none;
+  }
+  label[for="show_right"] {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #show_right:checked {
+    ~ .show {
+      display: block;
+    }
+    ~ .label_sh_r {
+      display: none;
+    }
+  }
+  .show {
+    width: 360px;
+    height: 418px;
+    border: 1px solid #ef4056;
+    position: absolute;
+    background-color: white;
+    top: -418px;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+    display: none;
+    label[for="hide_right"] {
+      width: 48px;
+      height: 48px;
+      position: absolute !important;
+      top: 428px;
+      right: 11px;
+      cursor: pointer;
+    }
+    .top {
+      width: 100%;
+      height: 55px;
+      background-color: #ef4056;
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-left: 16px;
+      padding-right: 16px;
+      cursor: default;
+      & p {
+        color: whitesmoke;
+        font-size: 18px;
+      }
+    }
+    .text {
+      width: 100%;
+      height: 355px;
+      padding-top: 12px;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      cursor: default;
+      .one {
+        width: 100%;
+        height: 39.89px;
+        font-size: 20px;
+        padding-right: 16px;
+      }
+      .two {
+        height: 60.19px;
+        width: 342px;
+        font-size: 14px;
+        line-height: 30px;
+        padding-right: 16px;
+      }
+      .text1,
+      .text2,
+      .text3 {
+        width: 325px;
+        border: 1px solid rgba(128, 128, 128, 0.205);
+        border-radius: 8px;
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 8px;
+        -ms-border-radius: 8px;
+        -o-border-radius: 8px;
+        margin: 0 auto;
+        .inner1 {
+          width: 100%;
+          height: 70px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding-bottom: 10px;
+          padding-right: 10px;
+          padding-left: 10px;
+          & p {
+            font-size: 15px;
+          }
+        }
+      }
+      .text1 {
+        position: relative;
+        input[type="radio"] {
+          display: none;
+        }
+        .inner2 {
+          display: none;
+          border-top: 1px solid rgb(231, 221, 221);
+          padding-top: 10px;
+          padding-right: 10px;
+          label[for="hide_text1_right"] {
+            position: absolute;
+            top: 20px;
+            left: 10px;
+          }
+          & p {
+            font-size: 13px;
+            line-height: 30px;
+            color: gray;
+          }
+        }
+        #show_text1_right:checked {
+          ~ .inner1 {
+            .labe1 {
+              display: none;
+            }
+          }
+          ~ .inner2 {
+            display: block;
+          }
+        }
+      }
+      .text2 {
+        margin-top: 10px;
+        .inner1 {
+          height: 100%;
+          & p {
+            width: 80%;
+            line-height: 30px;
+          }
+        }
+        position: relative;
+        input[type="radio"] {
+          display: none;
+        }
+        .inner2 {
+          display: none;
+          border-top: 1px solid rgb(231, 221, 221);
+          padding-top: 10px;
+          padding-right: 10px;
+          label[for="hide_text2_right"] {
+            position: absolute;
+            top: 20px;
+            left: 10px;
+          }
+          & p {
+            font-size: 13px;
+            line-height: 30px;
+            color: gray;
+          }
+        }
+        #show_text2_right:checked {
+          ~ .inner1 {
+            .labe1 {
+              display: none;
+            }
+          }
+          ~ .inner2 {
+            display: block;
+          }
+        }
+      }
+      .text3 {
+        margin-top: 10px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        & p {
+          width: 269.03px;
+          line-height: 30px;
+        }
+        position: relative;
+        input[type="radio"] {
+          display: none;
+        }
+        .inner2 {
+          display: none;
+          border-top: 1px solid rgb(231, 221, 221);
+          padding-top: 10px;
+          padding-right: 10px;
+          label[for="hide_text3_right"] {
+            position: absolute;
+            top: 20px;
+            left: 10px;
+          }
+          & p {
+            font-size: 13px;
+            line-height: 30px;
+            color: gray;
+          }
+        }
+        #show_text3_right:checked {
+          ~ .inner1 {
+            .labe1 {
+              display: none;
+            }
+          }
+          ~ .inner2 {
+            display: block;
+          }
+        }
+      }
+      .three {
+        width: 100%;
+        height: 30.09px;
 
+        font-size: 14px;
+        font-weight: bold;
+        text-align: center;
+        line-height: 30.09px;
+        margin-top: 30px;
+      }
+      & button {
+        width: 120px;
+        height: 50px;
+        background-color: #ef4056;
+        outline: unset;
+        border: unset;
+        cursor: pointer;
+        border-radius: 30px;
+        -webkit-border-radius: 30px;
+        -moz-border-radius: 30px;
+        -ms-border-radius: 30px;
+        -o-border-radius: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin: 0 auto;
+        margin-top: 10px;
+        & span {
+          font-size: 13px;
+          font-weight: bold;
+          color: white;
+        }
+      }
+    }
+  }
+}
 .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #ffffff;
     display: flex;
+    
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    
     & div {
       width: 92px;
       height: 100%;
       display: flex;
+     
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -991,6 +1416,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-flow: column;
     border-left: 0.5px #f2f2f2 solid;
     margin-top: 20px; 
     margin-bottom: 50px; 
