--- a/css/headeramazing.css
+++ b/css/headeramazing.css
@@ -97,6 +97,7 @@ header{
                     align-items: center;
                     column-gap: 10px;
                     text-decoration: none;
+                    line-height: 40px;
                     color: black;
                     
                    
