--- a/css/footeramazing.css
+++ b/css/footeramazing.css
@@ -1,8 +1,8 @@
 .digi_footer {
     width: 100%;
     height: auto;
-    position: absolute;
-    right: -650px;
+    position: relative;
+    right: -450px;
     top: 3200px;
     border-top: 1px solid rgba(128, 128, 128, 0.322);
     display: flex;
@@ -166,6 +166,7 @@
       margin-bottom: 28px;
       display: flex;
       align-items: center;
+      position: relative;
       background-color: #3c4b6d;
       padding-right: 20px;
       padding-left: 20px;
@@ -204,6 +205,9 @@
         justify-content: flex-end;
         align-items: center;
         column-gap: 15px;
+        position: absolute;
+        bottom: 100px;
+        left: -1px;
         & a {
           width: 142px;
           height: 44px;
