--- a/css/settingamazing.css
+++ b/css/settingamazing.css
@@ -13,23 +13,21 @@
     src: url(../fonts/IRANYekanWeb-Bold.woff2);
 
 }
-html,
-body {
-position: relative;
-height: 100%;
-}
-
-body {
-
-
-font-size: 14px;
-color: #000;
-margin: 0;
-padding: 0;
-overflow-x: hidden;
-}
-
-
 html,body{
   scroll-behavior: smooth;
+}
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
