--- a/css/footeramazing.css
+++ b/css/footeramazing.css
@@ -11,7 +11,7 @@ footer .left {
     align-items: center;
   
     position: relative;
-    right: 90%;
+    right: 80%;
 }
 footer .left a{
     width: 130px;
@@ -21,6 +21,7 @@ footer .left a{
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    font-size: 14px;
     
     color: #e0e0e2;
     margin-left: 20px;
@@ -46,11 +47,12 @@ footer .svg{
 footer .news{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 20px;
     margin-top: 30px;
-    
+    font-size: 11px;
+    color: black!important;
     & ul{
         list-style-type: none;
         padding: 0;
@@ -147,13 +149,15 @@ footer .aplicatin .main .point{
 .trust-section {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 20px;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
+    position: relative;
+    left: 150px;
 }
 
-/* استایل برای بخش لوگوها */
+
 .trust-logos {
     display: flex;
     align-items: center;
@@ -168,7 +172,7 @@ footer .aplicatin .main .point{
     border: 1px black solid;
 }
 
-/* استایل برای متن */
+
 .trust-text {
     max-width: 600px;
 }
@@ -242,4 +246,5 @@ footer .aplicatin .main .point{
 li{
   display: block;
   margin-bottom: 10px;
+  color: black;
 }
